[package]
description = "rspack allocator"
edition     = "2021"
license     = "MIT"
name        = "rspack_allocator"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
# Turned on `local_dynamic_tls` to avoid issue: https://github.com/microsoft/mimalloc/issues/147
mimalloc = { workspace = true, features = ["local_dynamic_tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
mimalloc = { workspace = true, features = ["v3"] }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "macos"), not(target_family = "wasm")))'.dependencies]
mimalloc = { workspace = true }
