[package]
description       = "rspack allocator"
edition.workspace = true
license           = "MIT"
name              = "rspack_allocator"
repository        = "https://github.com/web-infra-dev/rspack"
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
sftrace-setup = { workspace = true, optional = true }
tracy-client  = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Avoid static TLS allocation failures when loading the allocator dynamically.
snmalloc-rs = { workspace = true, features = ["local_dynamic_tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
snmalloc-rs = { workspace = true }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "macos"), not(target_family = "wasm")))'.dependencies]
snmalloc-rs = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracy-client-sys"]

[lints]
workspace = true
