[package]
edition = "2021"
name    = "rspack_ast"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }

rspack_error = { path = "../rspack_error" }
tracing      = "0.1.34"

swc_core = { workspace = true, features = [
  "base",
  "ecma_visit",
  "css_visit",
  "ecma_ast",
  "css_ast",
] }
