[package]
description = "rspack ast"
edition     = "2021"
license     = "MIT"
name        = "rspack_ast"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.1.0"
[dependencies]
anyhow = { workspace = true }
swc_core = { workspace = true, features = [
  "__ecma",
  "__visit",
  "__utils",
  "__ecma_transforms",
  "ecma_ast",
  "ecma_codegen",
  "ecma_quote",
  "swc_ecma_ast",
  "ecma_transforms_react",
  "ecma_transforms_module",
  "swc_ecma_codegen",
  "swc_ecma_visit",
] }
swc_error_reporters = { workspace = true }
swc_node_comments = { workspace = true }
