[package]
edition = "2021"
license = "MIT"
name    = "rspack_ast_viewer"
publish = false
version = "0.1.0"

[[bin]]
name = "rspack-ast-viewer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }
swc_core = { workspace = true, features = [
  "ecma_ast",
  "ecma_parser",
  "css_ast",
  "css_parser",
  "base",
  "common",
] }
