[package]
authors.workspace       = true
categories.workspace    = true
description             = "Rspack shared binding API"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "rspack_binding_api"
repository.workspace    = true
version.workspace       = true

[features]
allocative = [
  "rspack_util/allocative",
  "rspack_collections/allocative",
  "rspack_cacheable/allocative",
  "rspack_tracing_perfetto/allocative",
]
browser = ["dep:rspack_browser", "rspack_napi/browser"]
color-backtrace = ["dep:color-backtrace"]
debug_tool = ["rspack_core/debug_tool"]
plugin = ["rspack_loader_swc/plugin", "rspack_util/plugin"]
sftrace-setup = ["dep:sftrace-setup", "rspack_allocator/sftrace-setup"]
tracy-client = ["dep:tracy-client", "rspack_allocator/tracy-client"]

[dependencies]
anyhow                    = { workspace = true }
rspack_allocator          = { workspace = true }
rspack_browserslist       = { workspace = true }
rspack_collections        = { workspace = true }
rspack_core               = { workspace = true, features = ["napi"] }
rspack_error              = { workspace = true }
rspack_fs                 = { workspace = true }
rspack_hash               = { workspace = true }
rspack_hook               = { workspace = true }
rspack_napi               = { workspace = true }
rspack_paths              = { workspace = true }
rspack_plugin_esm_library = { workspace = true }
rspack_plugin_html        = { workspace = true }
rspack_plugin_javascript  = { workspace = true }
rspack_plugin_rsdoctor    = { workspace = true }
rspack_plugin_rslib       = { workspace = true }
rspack_plugin_rstest      = { workspace = true }
rspack_plugin_runtime     = { workspace = true }
rspack_tasks              = { workspace = true }
rspack_util               = { workspace = true }
rspack_watcher            = { workspace = true }
rspack_workspace          = { workspace = true }

async-trait             = { workspace = true }
cow-utils               = { workspace = true }
rspack_tracing          = { workspace = true }
rspack_tracing_perfetto = { workspace = true }
tracing                 = { workspace = true }
tracing-subscriber      = { workspace = true }
tracy-client            = { workspace = true, optional = true }

napi        = { workspace = true, features = ["async", "tokio_rt", "serde-json", "anyhow", "napi7", "compat-mode"] }
napi-derive = { workspace = true, features = ["compat-mode"] }

color-backtrace = { workspace = true, optional = true }

derive_more                            = { workspace = true, features = ["debug"] }
futures                                = { workspace = true }
glob                                   = { workspace = true }
heck                                   = { workspace = true }
once_cell                              = { workspace = true }
rayon                                  = { workspace = true }
regex                                  = { workspace = true }
rspack_browser                         = { workspace = true, optional = true }
rspack_cacheable                       = { workspace = true }
rspack_ids                             = { workspace = true }
rspack_javascript_compiler             = { workspace = true }
rspack_loader_lightningcss             = { workspace = true }
rspack_loader_preact_refresh           = { workspace = true }
rspack_loader_react_refresh            = { workspace = true }
rspack_loader_runner                   = { workspace = true }
rspack_loader_swc                      = { workspace = true }
rspack_loader_testing                  = { workspace = true }
rspack_napi_macros                     = { workspace = true }
rspack_plugin_asset                    = { workspace = true }
rspack_plugin_banner                   = { workspace = true }
rspack_plugin_circular_dependencies    = { workspace = true }
rspack_plugin_copy                     = { workspace = true }
rspack_plugin_css                      = { workspace = true }
rspack_plugin_css_chunking             = { workspace = true }
rspack_plugin_devtool                  = { workspace = true }
rspack_plugin_dll                      = { workspace = true }
rspack_plugin_dynamic_entry            = { workspace = true }
rspack_plugin_ensure_chunk_conditions  = { workspace = true }
rspack_plugin_entry                    = { workspace = true }
rspack_plugin_externals                = { workspace = true }
rspack_plugin_extract_css              = { workspace = true }
rspack_plugin_hmr                      = { workspace = true }
rspack_plugin_ignore                   = { workspace = true }
rspack_plugin_json                     = { workspace = true }
rspack_plugin_lazy_compilation         = { workspace = true }
rspack_plugin_library                  = { workspace = true }
rspack_plugin_lightning_css_minimizer  = { workspace = true }
rspack_plugin_limit_chunk_count        = { workspace = true }
rspack_plugin_merge_duplicate_chunks   = { workspace = true }
rspack_plugin_mf                       = { workspace = true }
rspack_plugin_module_info_header       = { workspace = true }
rspack_plugin_module_replacement       = { workspace = true }
rspack_plugin_no_emit_on_errors        = { workspace = true }
rspack_plugin_progress                 = { workspace = true }
rspack_plugin_real_content_hash        = { workspace = true }
rspack_plugin_remove_duplicate_modules = { workspace = true }
rspack_plugin_remove_empty_chunks      = { workspace = true }
rspack_plugin_runtime_chunk            = { workspace = true }
rspack_plugin_schemes                  = { workspace = true }
rspack_plugin_size_limits              = { workspace = true }
rspack_plugin_split_chunks             = { workspace = true }
rspack_plugin_sri                      = { workspace = true }
rspack_plugin_swc_js_minimizer         = { workspace = true }
rspack_plugin_warn_sensitive_module    = { workspace = true }
rspack_plugin_wasm                     = { workspace = true }
rspack_plugin_web_worker_template      = { workspace = true }
rspack_plugin_worker                   = { workspace = true }
rspack_regex                           = { workspace = true }
rspack_resolver                        = { workspace = true }
rustc-hash                             = { workspace = true }
serde                                  = { workspace = true }
serde_json                             = { workspace = true }
swc_core                               = { workspace = true, default-features = false, features = ["ecma_transforms_react"] }
tokio                                  = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "tracing", "parking_lot"] }
ustr                                   = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["parking_lot", "rspack_tracing_perfetto"]

[target.'cfg(target_family = "wasm")'.dependencies]
# Pin parking_lot version to the same version within the workspace
# Explicitly adding features `nightly` to turn on wasm atomic support
parking_lot = { version = "=0.12.3", features = ["nightly"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rspack_tracing = { workspace = true }
sftrace-setup  = { workspace = true, optional = true }
