[package]
description       = "node binding build"
edition.workspace = true
license           = "MIT"
name              = "rspack_binding_build"
publish           = false
repository        = "https://github.com/web-infra-dev/rspack"
version           = "0.2.0"

[dependencies]
napi-build = { workspace = true }
