[package]
authors.workspace       = true
categories.workspace    = true
description             = "Binding build script for rspack"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "rspack_binding_build"
repository.workspace    = true
version                 = "0.2.0"

[dependencies]
napi-build = { workspace = true }
