[package]
authors.workspace       = true
categories.workspace    = true
description             = "Rspack node builder"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "rspack_binding_builder"
repository.workspace    = true
version.workspace       = true

[features]
loader-swc-wasm-plugin = ["rspack_binding_api/loader-swc-wasm-plugin"]

[dependencies]
rspack_binding_api = { workspace = true }
