[package]
authors.workspace       = true
categories.workspace    = true
description             = "Rspack binding builder macros"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "rspack_binding_builder_macros"
repository.workspace    = true
version                 = "0.2.0"

[lib]
proc-macro = true

[dependencies]
rspack_binding_builder = { workspace = true }

proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full"] }
