[package]
authors.workspace       = true
categories.workspace    = true
description             = "Rspack binding builder macros"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "rspack_binding_builder_macros"
repository.workspace    = true
version.workspace       = true

[lib]
proc-macro = true

[dependencies]
rspack_binding_builder = { workspace = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "full",
  "visit-mut",
  "derive",
  "parsing",
  "printing",
  "clone-impls",
  "proc-macro",
] }

[lints]
workspace = true
