[package]
edition    = "2021"
license    = "MIT"
name       = "rspack_binding_macros"
publish    = false
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { workspace = true, default-features = false, features = [
  "async",
  "tokio_rt",
  "serde-json",
  "napi5",
  "anyhow",
] }
rspack_napi_shared = { path = "../rspack_napi_shared" }
