[package]
edition    = "2021"
license    = "MIT"
name       = "rspack_binding_options"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

[dependencies]
rspack_binding_macros                   = { path = "../rspack_binding_macros" }
rspack_core                             = { path = "../rspack_core" }
rspack_error                            = { path = "../rspack_error" }
rspack_identifier                       = { path = "../rspack_identifier" }
rspack_ids                              = { path = "../rspack_ids" }
rspack_loader_sass                      = { path = "../rspack_loader_sass" }
rspack_loader_swc                       = { path = "../rspack_loader_swc" }
rspack_napi_shared                      = { path = "../rspack_napi_shared" }
rspack_plugin_asset                     = { path = "../rspack_plugin_asset" }
rspack_plugin_banner                    = { path = "../rspack_plugin_banner" }
rspack_plugin_copy                      = { path = "../rspack_plugin_copy" }
rspack_plugin_css                       = { path = "../rspack_plugin_css" }
rspack_plugin_dev_friendly_split_chunks = { path = "../rspack_plugin_dev_friendly_split_chunks" }
rspack_plugin_devtool                   = { path = "../rspack_plugin_devtool" }
rspack_plugin_entry                     = { path = "../rspack_plugin_entry" }
rspack_plugin_externals                 = { path = "../rspack_plugin_externals" }
rspack_plugin_html                      = { path = "../rspack_plugin_html" }
rspack_plugin_javascript                = { path = "../rspack_plugin_javascript" }
rspack_plugin_json                      = { path = "../rspack_plugin_json" }
rspack_plugin_library                   = { path = "../rspack_plugin_library" }
rspack_plugin_progress                  = { path = "../rspack_plugin_progress" }
rspack_plugin_real_content_hash         = { path = "../rspack_plugin_real_content_hash" }
rspack_plugin_remove_empty_chunks       = { path = "../rspack_plugin_remove_empty_chunks" }
rspack_plugin_runtime                   = { path = "../rspack_plugin_runtime" }
rspack_plugin_schemes                   = { path = "../rspack_plugin_schemes" }
rspack_plugin_split_chunks              = { path = "../rspack_plugin_split_chunks" }
rspack_plugin_split_chunks_new          = { path = "../rspack_plugin_split_chunks_new" }
rspack_plugin_wasm                      = { path = "../rspack_plugin_wasm" }
rspack_plugin_worker                    = { path = "../rspack_plugin_worker" }
rspack_regex                            = { path = "../rspack_regex" }

anyhow            = { workspace = true, features = ["backtrace"] }
async-trait       = { workspace = true }
better_scoped_tls = { workspace = true }
derivative        = { workspace = true }
glob              = { workspace = true }
indexmap          = { workspace = true }
napi              = { workspace = true, features = ["async", "tokio_rt", "serde-json", "anyhow"] }
napi-derive       = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
swc_core          = { workspace = true, default-features = false, features = ["ecma_transforms_react"] }
swc_plugin_import = { workspace = true }
tokio             = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }
tracing           = { workspace = true }
