[package]
edition = "2021"
name    = "rspack_binding_shared"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "2", default-features = false, features = [
  "async",
  "tokio_rt",
  "serde-json",
  "napi5",
  "anyhow",
] }
rspack_error = { path = "../rspack_error", features = ["napi"] }
tokio = { workspace = true }
