[package]
description = "rspack binding values"
edition     = "2021"
license     = "MIT"
name        = "rspack_binding_values"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"
[dependencies]
cow-utils             = { workspace = true }
futures               = { workspace = true }
heck                  = { workspace = true }
napi                  = { workspace = true, features = ["async", "tokio_rt", "serde-json", "anyhow"] }
napi-derive           = { workspace = true }
rspack_collections    = { workspace = true }
rspack_core           = { workspace = true }
rspack_error          = { workspace = true }
rspack_napi           = { workspace = true }
rspack_plugin_html    = { workspace = true }
rspack_plugin_runtime = { workspace = true }
rspack_regex          = { workspace = true }
rspack_util           = { workspace = true }
rustc-hash            = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
