[package]
authors.workspace       = true
categories.workspace    = true
description             = "Rspack browserslist"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "rspack_browserslist"
repository.workspace    = true
version.workspace       = true

[dependencies]
browserslist-rs = { workspace = true }
lightningcss    = { path = "../rspack_monomorphized_lightningcss", package = "rspack_monomorphized_lightningcss" }
regex           = { workspace = true }

[lints]
workspace = true
