[package]
edition = "2021"
name    = "rspack_build"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspack_core    = { path = "../rspack_core" }
rspack_error   = { path = "../rspack_error" }
rspack_fs      = { path = "../rspack_fs", features = ["async"] }
rspack_testing = { path = "../rspack_testing" }
tokio          = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }

[[bin]]
name = "rspack_build"
